* adds notification count * Header and pages height fixes * adds scrollbar always visible * rename HackathonProfileInfo with OrganizationProfileInfo * accessibility fixes (buttons hover, requiredFilds, link)

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -37,6 +37,12 @@
     }
 }
 
+/* Scrollbar always visible to avoid page resizing when opening the drawer */
+html {
+    overflow: -moz-scrollbars-vertical;
+    overflow-y: scroll;
+}
+
 .App {
     height: 100%;
 }
